--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light"> 
+<html lang="pt-br" class=""> 
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
   
   <div id="container">
     <div id="profile">
-      <img src="./assets/avatar.png" alt="Foto de Victor Dias sorrindo, usando óculos e de camisa preta.">
+      <img src="./src/css/images/avatar.png" alt="Foto de Victor Dias sorrindo, usando óculos e de camisa preta.">
       <p>@vitonso</p>
     </div>
 
